# gors

./: README.md  dune-project  gors.opam
lib/: dune  syntax.ml
test/: dune
