(lang dune 3.7)

(name gors)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Malik Ammar Faisal")

(license LICENSE)

(package
 (name gors)
 (synopsis "fusion of go and rust")
 (description "fusion of go and rust")
 (depends ocaml dune)
 (tags
  ("langauge" "go" "rust" "ocaml" "fusion" "gors" "golang")))
